Modified reg form, added userprofile with navbar & empty friends page

--- a/homepage.html
+++ b/homepage.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <title>Project</title>
-    <link rel="stylesheet" href="mycss.css">
+    <!--<link rel="stylesheet" href="mycss.css"> Not using any css as of now-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </head>
   <body>
     <!-- Nav Bar -->
@@ -34,13 +34,36 @@
                   <div class="modal-body">
                     <!-- Register form -->
                     <form>
+                      <div class="form-row form-group">
+                        <div class="col">
+                          <label for="regFName">First Name</label>
+                          <input type="text" class="form-control" id="regFName" placeholder="Enter First Name" required>
+                        </div>
+                        <div class="col">
+                          <label for="regLName">Last Name</label>
+                          <input type="text" class="form-control" id="regLName"placeholder="Enter Last Name" required>
+                        </div>
+                      </div>
                       <div class="form-group">
                         <label for="regEmail">Email</label>
                         <input type="email" class="form-control" id="regEmail" placeholder="Enter Email" required>
                       </div>
-                      <div class="form-group">
-                        <label for="regUsername">Username</label>
-                        <input type="text" class="form-control" id="regUsername" placeholder="Enter Username" required>
+                      <div class="form-row form-group">
+                        <div class="col">
+                          <label for="regCity">City</label>
+                          <input type="text" class="form-control" id="regCity" placeholder="Enter City" required>
+                        </div>
+                        <div class="col">
+                          <label for="regCountry">Country</label>
+                          <input type="text" class="form-control" id="regCountry"placeholder="Enter Country" required>
+                        </div>
+                      </div>
+                      <label for="regUsername">Username</label>
+                      <div class="form-group input-group">
+                        <div class="input-group-prepend">
+                          <span class="input-group-text" id="addon1">@</span>
+                        </div>
+                        <input type="text" class="form-control" id="regUsername" aria-describedby="addon1" placeholder="Enter Username" required>
                       </div>
                       <div class="form-group">
                         <label for="regPassword">Password</label>
@@ -73,9 +96,12 @@
                   <div class="modal-body">
                     <!-- Login form-->
                     <form>
-                      <div class="form-group">
-                        <label for="loginUsername">Username</label>
-                        <input type="text" class="form-control" id="loginUsername" placeholder="Enter Username" required>
+                      <label for="loginUsername">Username</label>
+                      <div class="form-group input-group">
+                        <div class="input-group-prepend">
+                          <span class="input-group-text" id="addon1">@</span>
+                        </div>
+                        <input type="text" class="form-control" id="loginUsername" aria-describedby="addon1" placeholder="Enter Username" required>
                       </div>
                       <div class="form-group">
                         <label for="loginPassword">Password</label>
