--- a/Exchange App/userprofile.html
+++ b/Exchange App/userprofile.html
@@ -36,7 +36,8 @@ require account.php;
           <!-- end of notifications button -->
           <li class="nav-item">
             <!-- Logout button functionality (does nothing for now)-->
-            <button class="btn btn-dark" type="button">Logout</button>
+
+           <a class="btn btn-dark" href="includes/logout.inc.php">Logout </a>
           </li>
           <!-- end of logout button-->
         </ul>
