--- a/Exchange App/userprofile.html
+++ b/Exchange App/userprofile.html
@@ -119,6 +119,14 @@ require account.php;
             <label for="depositamt">Amount</label>
             <input type="input" class="form-control" name="deposit-amount" id="depositamt" placeholder="Enter Amount" required>
           </div>
+          <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" class="form-control" name="deposit-username" id="depositamt" placeholder="Enter Username" required>
+          </div>
+          <div class="form-group">
+            <label for="pwd">Password</label>
+            <input type="password" class="form-control" name="deposit-pwd" id="depositamt" placeholder="Enter Password" required>
+          </div>
           <button type="submit" name="deposit-submit" class="btn btn-dark">Submit</button>
         </form>
         <!-- end of deposit form -->
@@ -154,6 +162,14 @@ require account.php;
           <div class="form-group">
             <label for="withdrawamt">Amount</label>
             <input type="input" class="form-control" name="withdraw-amount" id="withdrawamt" placeholder="Enter Amount" required>
+          </div>
+          <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" class="form-control" name="withdraw-username" id="depositamt" placeholder="Enter Username" required>
+          </div>
+          <div class="form-group">
+            <label for="pwd">Password</label>
+            <input type="password" class="form-control" name="withdraw-pwd" id="depositamt" placeholder="Enter Password" required>
           </div>
           <button type="submit" name="withdraw-submit"class="btn btn-dark">Submit</button>
         </form>
