--- a/Exchange App/index.html
+++ b/Exchange App/index.html
@@ -63,6 +63,8 @@ require "includes/udbh.inc.php";
                 <label for="regPassword">Password</label>
                 <input type="password" class="form-control" name="pwd" id="regPassword" placeholder="Enter Password" required>
               </div>
+                <input type="password" class="form-control" name="pwd-repeat" id="regPassword" placeholder="Renter Password" required>
+              </div>
               <button type="submit" class="btn btn-dark" name="signup-submit">Submit</button>
             </form>
             <!-- end of register form -->
