Added messages to homepage

--- a/Exchange App/index.html
+++ b/Exchange App/index.html
@@ -14,7 +14,7 @@ require "includes/udbh.inc.php";
   <body class="bodybg">
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-      <a class="navbar-brand" href="#">Website Name</a>
+      <a class="navbar-brand" href="#">P2P Home</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -73,7 +73,7 @@ require "includes/udbh.inc.php";
       </div>
     </div>
     <!-- end of register modal-->
-    
+
     <!-- Pop up modal - login form -->
     <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered" role="document">
@@ -110,8 +110,8 @@ require "includes/udbh.inc.php";
     <!-- Page content -->
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h1 class="display-4">Fluid jumbotron</h1>
-        <p class="lead">Can add something about website</p>
+        <h1 class="display-4">Welcome to our website!</h1>
+        <p class="lead">You can transfer money to your friends via 3 different currencies. Register/Login to begin!</p>
       </div>
     </div>
 </body>
